# AttractorRenderer

./: .gitignore  .gitmodules  Attractor.h  Buffer.h  CMakeLists.txt  Palette.h  README.md  Window.h  main.cpp  vector.h
libs/: CMakeLists.txt
src/: clifford.h  image.h  main.cpp  palette.h  window.h
